Web Inspector: Disabling Inspector causes build failure on Windows https://bugs.webkit.org/show_bug.cgi?id=83557

Patch by Vivek Galatage <vivekgalatage@gmail.com> on 2012-04-11
Reviewed by Pavel Feldman.

Source/WebKit/win:

The calls to inspector APIs are not put under ENABLE(INSPECTOR) guard.
This change brings all such API calls under the guard.

* WebCoreSupport/WebInspectorClient.cpp:
* WebInspector.cpp:
* WebNodeHighlight.cpp:
(WebNodeHighlight::WebNodeHighlight):
(WebNodeHighlight::update):
* WebNodeHighlight.h:
(WebNodeHighlight):
* WebView.cpp:
(WebView::WebView):
(WebView::close):
(WebView::initWithFrame):
(WebView::inspector):
* WebView.h:
(WebView):

Tools:

The calls to inspector APIs are not put under ENABLE(INSPECTOR) guard.
This change brings all such API calls under the guard.

* WebKitTestRunner/InjectedBundle/Bindings/LayoutTestController.idl:
* WebKitTestRunner/InjectedBundle/LayoutTestController.cpp:
(WTR):
* WebKitTestRunner/InjectedBundle/LayoutTestController.h:
(LayoutTestController):
* WebKitTestRunner/TestInvocation.cpp:
(WTR::TestInvocation::invoke):

Canonical link: https://commits.webkit.org/101134@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113836 268f45cc-cd09-0410-ab3c-d52691b4dbfc