Source/WebKit/win/WebCoreSupport/WebInspectorClient.cpp
@@ -29,6 +29,8 @@
 #include "config.h"
 #include "WebInspectorClient.h"
 
+#if ENABLE(INSPECTOR)
+
 #include "WebInspectorDelegate.h"
 #include "WebKit.h"
 #include "WebMutableURLRequest.h"
@@ -546,3 +548,5 @@ static ATOM registerWindowClass()
 
     return ::RegisterClassEx(&wcex);
 }
+
+#endif // ENABLE(INSPECTOR)
