Source/WebKit/win/WebInspector.cpp
@@ -29,6 +29,8 @@
 #include "config.h"
 #include "WebInspector.h"
 
+#if ENABLE(INSPECTOR)
+
 #include "WebInspectorClient.h"
 #include "WebKitDLL.h"
 #include "WebView.h"
@@ -276,3 +278,5 @@ HRESULT STDMETHODCALLTYPE WebInspector::setTimelineProfilingEnabled(BOOL enabled
     frontendClient()->setTimelineProfilingEnabled(enabled);
     return S_OK;
 }
+
+#endif // ENABLE(INSPECTOR)
